app/static/style.css
@font-face {
    font-family: 'Vision-Regular';
    src: url('Vision-Regular.otf') format("opentype");
}

@font-face {
    font-family: 'Vision-Light';
    src: url('Vision-Light.otf') format("opentype");
}

@font-face {
    font-family: 'Vision-Bold';
    src: url('Vision-Bold.otf') format("opentype");
}

html, body {
    height: 100%;
    font-family: 'Vision-Regular';
}

form label {
    font-family: 'Vision-Bold';
    font-weight: 700;
}

form input {
    font-family: 'Vision-Light';
}

form textarea {
    font-family: 'Vision-Light';
}

select option {
    font-family: 'Vision-Light';
}

.container {
    height: 100%
}

#navbar-cust {
    border-right: none;
    border-left: none;
    border-top: none;
    border-bottom: solid 1px #ccc;
    border-radius: 0px;
}

.nav-item {
    margin-top: 20px;
}

.about-title {
    font-family: Vision-Bold;
    text-align: center;
    color: white;
    text-shadow: 1px 1px rgb(0, 115, 156);
    font-size: 60px;
    margin-bottom: 20px;
}

#nav-item-id {
    color: black;
    font-family: Vision-Bold;
    text-decoration: none;
    margin-right: 50px;
    font-size: 15px;
}

#nav-item-id:hover {
    color: gray;
}

.register-bg {
    align-items: center;
    background-color: #00C1B0;
    background-image: linear-gradient(180deg, #01B0E7 10%, #00C1B0 90%);
    background-repeat: no-repeat;
    min-height: 100%;
}

.register-form {
    font-family: Vision-Bold;
    border-radius: 0;
    border-style: none;
    background-color: rgba(255,255,255,0.3);
    border-bottom: solid 2px black;
}

.message-box-old {
    background-color: rgba(200,200,200,0.1);
    border-right: 1px solid #ccc;
    height: 650px;
    overflow: scroll;
    margin-top: 25px;
}

.message-box {
    background-color: rgba(200,200,200,0.1);
    border-color: black;
    border-style: solid;
    border-width: 3px;
    box-shadow: 0px 0px 8px 5px #eee;
    height: 600px;
    overflow: scroll;
    margin-top: 75px;
}

.text-bubble-left  {
    display: inline-block;
    border-radius: 10px;
    background-color: #D5F5F0;
    text-align: left;
    padding: .5em 1em .5em 1em;
    width: 300px;
    margin-top: 5px;
}

.text-bubble-left2  {
    display: inline-block;
    border-radius: 10px;
    background-color: #D5F5F0;
    text-align: left;
    padding: .5em 1em .5em 1em;
    width: 100%;
    margin-top: 0;
}

.text-bubble-right2 {
    display: inline-block;
    border-radius: 10px;
    background-color: #CAEEF9;
    text-align: right;
    padding: .5em 1em .5em 1em;
    width: 100%;
    margin-top: 0;
}

.text-bubble-right {
    display: inline-block;
    border-radius: 10px;
    background-color: #CAEEF9;
    text-align: right;
    padding: .5em 1em .5em 1em;
    width: 300px;
    margin-top: 20px;
}

.text-bubble-center {
    font-weight: 700;
    border-radius: 10px;
    color: white;
    background-color: #00BAC7;
    text-align: center;
    padding: .5em 1em .5em 1em;
    width: 300px;
    margin-top: 20px;
    margin-right: auto;
    margin-left: auto;
}

.center-div {
    margin: 0 auto;
    width: 300px;
}

.user-list {
    color: black;
}

.user-list:hover {
    color: black;
    text-decoration: none;
}

.list-item-box {
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 30px;
}

.btn-cust {
    padding: 0.75em 1em;
    background-color: #00BAC7;
    font-weight: 700;
    color: white;
    border-style: none;
}

.btn-cust:hover {
    box-shadow: 0 0 5px 3px rgba(0,0,0,0.15);
    color: white;
}

.bio-box {
    text-align: right;
}

.bio-box:hover {
    box-shadow: none;
}

.text-input {
    border-style: none;
    border-radius: 15px;
    background-color: #eee;
    width: 75%;
    height: 40px;
    margin-top: 10px;
    margin-right: 10px;
    float: right;
}

.text-input-btn {
    border-style: none;
    color: white;
    font-family: Vision-Bold;
    background-color: #00BAC7;
    border-radius: 15px;
    height: 40px;
    margin: 10px 0 0 0;
    float: right;
}

.match-btn {
    border-style: none;
    font-size: medium;
    color: white;
    font-weight: 700;
    background-color: #00BAC7;
    border-radius: 15px;
    margin: 0 0 0 0;
    padding: 1em 1.5em;
    width: 100px;
}

.text-input-btn:hover {
    box-shadow: 0 0 5px 3px #ddd;
}

.profile-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    border-style: solid;
    border-width: 3px;
    margin: 30px 0 20px 0;;
}

.cropped-img {
    height: 250px;
    width: 200px;
    object-fit: cover;
    margin: 2px;
    border-radius: 15px;
    box-shadow: 0px 0px 5px 3px #eee;
}

.empty-img {
    height: 250px;
    width: 200px;
    margin: 2px;
    border-radius: 15px;
    box-shadow: 0px 0px 5px 3px #eee;
}

.cropped-img-cir {
    height: 150px; /* height of container */
    width: 150px;
    object-fit: cover;
    margin: 0 30px;
    border-radius: 100%;
    box-shadow: 0px 0px 5px 3px #eee;
}

.cropped-img-profile {
    height: 250px; /* height of container */
    object-fit: cover;
    margin: 2px;
    box-shadow: 0px 0px 5px 3px #eee;
    border-radius:20px;
    margin-right:20px
}

.message-box-img {
    height: 60px; /* height of container */
    width: 60px;
    object-fit: cover;
    margin: 2px;
    border-radius: 100%;
    vertical-align: top;
}

.inline-block {
    display: inline-block;
}

.float-img-right  {
    float: right;
}

.img-scroll {
    overflow: auto;
    white-space: nowrap;
}

.username:hover {
    color: gray;
}

.bio-par {
    margin-bottom: 75px;
    background-color: rgba(200,200,200,0.1);
    padding: .5em 1em .5em 1em;
    border-radius: 10px;
}

.bio-title {
    padding-bottom: .3em;
    border-bottom: solid 1px #ccc;
}

.user-info {
    padding: 20px;
    height: 200px;
    width: 60%
    margin-top: 20px
}

.delete_btn {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.img-container {
    position: relative;
    width: 200px;
    height: 250px;
}

#update-btn {
    background-color: #00BAC7;
    color: white;
    border-radius: 10px;
    font-family: Vision-Bold;
    border-style: none;
}

.login-btn {
    margin:20px 0;
    background-color: #00BAC7;
    color: white;
    border-radius: 10px;
    font-weight: 700;
}

.img-container:hover .delete_btn {
    opacity: 1;
    padding: .75em 1em .75em 1em;
    background-color: #00BAC7;
    color: white;
    border-radius: 10px;
    font-weight: 700;
}

.delete_btn a {
    color: white;
    text-decoration: none;
}

.img-container:hover .cropped-img {
    opacity: .3;
}

.input-form {
    margin-bottom: 10px;
}

.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 60%
}

/* The Close Button */
#close {
  color: #666;
  float: right;
  font-size: 40px;
  font-weight: bold;
}

#close:hover,
#close:focus {
  color: #ccc;
  text-decoration: none;
  cursor: pointer;
}

#closeUpdate {
  color: #666;
  float: right;
  font-size: 40px;
  font-weight: bold;
}

#closeUpdate:hover,
#closeUpdate:focus {
  color: #ccc;
  text-decoration: none;
  cursor: pointer;
}

.bold-txt {
    font-family: 'Vision-Bold';
    color: white;
    margin-left: 15px;
}

.light-txt {
    font-family: 'Vision-Light';
    color: white;
    margin-left: 15px;
}

.loader {
  margin: auto auto;
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #00BAC7;
  width: 100px;
  height: 100px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.icon-info-bar {
    border-right: 1px solid #ccc;
    padding: 5px 40px 0 40px;
}

.search-img-box {
    width: 100%;
    position: relative;
    margin-left: 0;
    margin-right: 0;
    height: 450px;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    margin-bottom: 20px;
    background-color: #eee;
}

.search-img {
    width: 400px;
    height: 500px;
    object-fit: cover;
}

.search-img-info {
    position: absolute;
    bottom: 0;
    background-color: rgba(50,50,50,0.7);
    width: 100%;
}

.right-arrow {
    width: 30px;
    padding-bottom: 50px;
    opacity: 0.5;
}

.right-arrow:hover {
    opacity: 0.7;
}

.home-info-list {
    font-family: Vision-Light;
    border-bottom: solid 1px #333;
    margin: 10px 0 40px 0;
    padding-bottom: 5px;
}

.container-shadow-box {
    margin: 40px 0;
    box-shadow: 0px 0px 10px 0 rgba(0,0,0,0.1);
    padding: 0 20px 40px 20px;
    border-radius: 30px;
}

